--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -20,6 +20,8 @@ jobs:
     # See: https://circleci.com/docs/jobs-steps/#steps-overview & https://circleci.com/docs/configuration-reference/#steps
     steps:
       # Checkout the code as the first step.
+      - run:
+          command: echo "<< pipeline.trigger_parameters.github_app.commit_message >>"
       - checkout
       - restore_cache:
           keys:
@@ -51,6 +53,6 @@ workflows:
         - not:
             matches:
               pattern: "NOCIRCLECI"
-              value: git log --format=oneline -n 1 $CIRCLE_SHA1
+              value: $(git log --format=oneline -n 1 $CIRCLE_SHA1)
     jobs:
       - build
