--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -51,8 +51,11 @@ workflows:
             pattern: "^release.+"
             value: << pipeline.git.branch >>
         - not:
+            # matches:
+            #   pattern: "NOCIRCLECI"
+            #   value: << pipeline.trigger_parameters.github_app.commit_message >>
             matches:
               pattern: "NOCIRCLECI"
-              value: << pipeline.trigger_parameters.github_app.commit_message >>
+              value: "NOCIRCLECI test"
     jobs:
       - build
