--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -50,12 +50,8 @@ workflows:
         - matches:
             pattern: "^release.+"
             value: << pipeline.git.branch >>
-        - not:
-            # matches:
-            #   pattern: "NOCIRCLECI"
-            #   value: << pipeline.trigger_parameters.github_app.commit_message >>
-            matches:
-              pattern: "NOCIRCLECI"
-              value: "NOCIRCLECI test"
+        - matches:
+            pattern: "^(?:(?!NOCIRCLECI).)*$"
+            value: << pipeline.trigger_parameters.github_app.commit_message >>
     jobs:
       - build
