--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -48,9 +48,8 @@ workflows:
         - matches:
             pattern: "^release.+"
             value: << pipeline.git.branch >>
-        - not:
-            matches:
-              pattern: "NOCIRCLECI"
-              value: git log --format=oneline -n 1 $CIRCLE_SHA1
+        - matches:
+            pattern: "^(?:(?!NOCIRCLECI).)*$"
+            value: << pipeline.trigger_parameters.github_app.commit_message >>
     jobs:
       - build
