--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -30,7 +30,7 @@ jobs:
       - checkout
       - run:
           command: |
-            export COMMIT_MESSAGE=$(git log --format=oneline -n 1 $CIRCLE_SHA1)
+            export COMMIT_MESSAGE=$(git log --format="%s%n%b" -n 1 $CIRCLE_SHA1)
             echo "{\"commit_message\": \"$COMMIT_MESSAGE\"}" >> set-up-params.json
       - continuation/continue:
           parameters: set-up-params.json
